Test: Refactor tests to unit tests with MockitoExtension, Added JaCoCo test coverage