@@ -1,257 +1,151 @@
 package com.blog.API.Rest;
 
+import com.blog.API.Response.SuccessResponse;
 import com.blog.DataTransporter.Post.CreatePostDTO;
-import com.blog.DataTransporter.Post.ResponsePostDTO;
 import com.blog.DataTransporter.Post.UpdatePostDTO;
-import com.blog.Model.Post;
+import com.blog.DataTransporter.Post.ResponsePostDTO;
 import com.blog.Service.PostService;
-import com.fasterxml.jackson.databind.ObjectMapper;
+import com.blog.Model.Post;
 import jakarta.persistence.EntityNotFoundException;
-import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
-import org.springframework.http.MediaType;
-import org.springframework.test.web.servlet.MockMvc;
+import org.springframework.data.domain.Pageable;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 
-import java.time.LocalDateTime;
-import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyInt;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
-@WebMvcTest(RestPostController.class)
-@DisplayName("REST Post Controller Tests")
+@ExtendWith(MockitoExtension.class)
 class RestPostControllerTest {
 
-    @Autowired
-    private MockMvc mockMvc;
-
-    @MockBean
+    @Mock
     private PostService postService;
 
-    @Autowired
-    private ObjectMapper objectMapper;
+    @InjectMocks
+    private RestPostController postController;
 
-    private long testStartTime;
-    private long testEndTime;
+    private CreatePostDTO createDTO;
+    private Post mockPost;
 
     @BeforeEach
     void setUp() {
-        testStartTime = System.nanoTime();
-    }
-
-    @AfterEach
-    void tearDown() {
-        testEndTime = System.nanoTime();
-        long executionTimeMs = (testEndTime - testStartTime) / 1_000_000;
-        System.out.println("Execution Time: " + executionTimeMs + " ms");
+        createDTO = new CreatePostDTO(1, "Title", "Content", false);
+        mockPost = new Post();
     }
 
     @Test
-    @DisplayName("GET /api/posts/{id} - Should retrieve post by ID successfully")
-    void testFindPostById() throws Exception {
-        // Arrange
-        Post post = new Post(1, 1, "Test Post", "Test Body", false, LocalDateTime.now());
-        when(postService.findById(1)).thenReturn(Optional.of(post));
+    void findById_Success() {
+        when(postService.findById(1)).thenReturn(Optional.of(mockPost));
 
-        // Act & Assert
-        mockMvc.perform(get("/api/posts/1"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.data.postId").value(1))
-                .andExpect(jsonPath("$.data.title").value("Test Post"))
-                .andExpect(jsonPath("$.message").value("Post found and returned successfully"));
+        ResponseEntity<SuccessResponse<ResponsePostDTO>> response = postController.findById(1);
 
-        verify(postService, times(1)).findById(1);
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertNotNull(response.getBody());
+        verify(postService).findById(1);
     }
 
     @Test
-    @DisplayName("GET /api/posts/{id} - Should return 404 when post not found")
-    void testFindPostNotFound() throws Exception {
-        // Arrange
-        when(postService.findById(999)).thenReturn(Optional.empty());
+    void findById_NotFound() {
+        when(postService.findById(1)).thenReturn(Optional.empty());
 
-        // Act & Assert
-        mockMvc.perform(get("/api/posts/999"))
-                .andExpect(status().isNotFound());
+        ResponseEntity<SuccessResponse<ResponsePostDTO>> response = postController.findById(1);
 
-        verify(postService, times(1)).findById(999);
+        assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
+        assertNotNull(response.getBody());
+        verify(postService).findById(1);
     }
 
     @Test
-    @DisplayName("GET /api/posts - Should retrieve all posts with pagination")
-    void testFindAllPosts() throws Exception {
-        // Arrange
-        Post post1 = new Post(1, 1, "Post 1", "Body 1", false, LocalDateTime.now());
-        Post post2 = new Post(2, 1, "Post 2", "Body 2", false, LocalDateTime.now());
-        Page<Post> postPage = new PageImpl<>(Arrays.asList(post1, post2), PageRequest.of(0, 10), 2);
+    void findAll_Success() {
+        Pageable pageable = PageRequest.of(0, 10);
+        Page<Post> postPage = new PageImpl<>(List.of(mockPost));
+        when(postService.findAll(pageable)).thenReturn(postPage);
 
-        when(postService.findAll(any())).thenReturn(postPage);
+        ResponseEntity<SuccessResponse<Page<ResponsePostDTO>>> response = postController.findAll(pageable);
 
-        // Act & Assert
-        mockMvc.perform(get("/api/posts?page=0&size=10"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.data.content.length()").value(2));
-
-        verify(postService, times(1)).findAll(any());
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertNotNull(response.getBody());
+        verify(postService).findAll(pageable);
     }
 
     @Test
-    @DisplayName("GET /api/posts - Should retrieve all posts with sorting")
-    void testFindAllPostsWithSorting() throws Exception {
-        // Arrange
-        Post post1 = new Post(1, 1, "Post 1", "Body 1", false, LocalDateTime.now());
-        Post post2 = new Post(2, 1, "Post 2", "Body 2", false, LocalDateTime.now());
-        Page<Post> postPage = new PageImpl<>(Arrays.asList(post1, post2), PageRequest.of(0, 10), 2);
+    void createPost_Success() {
+        when(postService.save(createDTO)).thenReturn(mockPost);
 
-        when(postService.findAll(any())).thenReturn(postPage);
+        ResponseEntity<SuccessResponse<ResponsePostDTO>> response = postController.createPost(createDTO);
 
-        // Act & Assert
-        mockMvc.perform(get("/api/posts?page=0&size=10&sort=title,desc"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.data.content.length()").value(2));
-
-        verify(postService, times(1)).findAll(any());
+        assertEquals(HttpStatus.CREATED, response.getStatusCode());
+        assertNotNull(response.getBody());
+        verify(postService).save(createDTO);
     }
 
     @Test
-    @DisplayName("POST /api/posts - Should create post successfully")
-    void testCreatePost() throws Exception {
-        // Arrange
-        CreatePostDTO postDTO = new CreatePostDTO(1, "New Post", "New Body", false);
-        Post savedPost = new Post(1, 1, "New Post", "New Body", false, LocalDateTime.now());
+    void updatePost_Success() {
+        Integer pathVariableId = 1;
+        UpdatePostDTO dtoWithoutId = new UpdatePostDTO(null, 1, "Title", "Content", false);
+        UpdatePostDTO dtoWithId = new UpdatePostDTO(pathVariableId, 1, "Title", "Content", false);
 
-        when(postService.save(any(CreatePostDTO.class))).thenReturn(savedPost);
+        when(postService.update(dtoWithId)).thenReturn(mockPost);
 
-        // Act & Assert
-        mockMvc.perform(post("/api/posts")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(postDTO)))
-                .andExpect(status().isCreated())
-                .andExpect(jsonPath("$.data.postId").value(1))
-                .andExpect(jsonPath("$.data.title").value("New Post"))
-                .andExpect(jsonPath("$.message").value("Post created successfully"));
+        ResponseEntity<SuccessResponse<ResponsePostDTO>> response =
+                postController.updatePost(pathVariableId, dtoWithoutId);
 
-        verify(postService, times(1)).save(any(CreatePostDTO.class));
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertNotNull(response.getBody());
+        verify(postService).update(dtoWithId);
     }
 
     @Test
-    @DisplayName("POST /api/posts - Should create draft post successfully")
-    void testCreateDraftPost() throws Exception {
-        // Arrange
-        CreatePostDTO postDTO = new CreatePostDTO(1, "Draft Post", "Draft Body", true);
-        Post savedPost = new Post(1, 1, "Draft Post", "Draft Body", true, LocalDateTime.now());
+    void updatePost_Failure_PropagatesException() {
+        Integer pathVariableId = 1;
+        UpdatePostDTO dtoWithoutId = new UpdatePostDTO(null, 1, "Title", "Content", false);
+        UpdatePostDTO dtoWithId = new UpdatePostDTO(pathVariableId, 1, "Title", "Content", false);
 
-        when(postService.save(any(CreatePostDTO.class))).thenReturn(savedPost);
-
-        // Act & Assert
-        mockMvc.perform(post("/api/posts")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(postDTO)))
-                .andExpect(status().isCreated())
-                .andExpect(jsonPath("$.data.draft").value(true))
-                .andExpect(jsonPath("$.message").value("Post created successfully"));
-
-        verify(postService, times(1)).save(any(CreatePostDTO.class));
-    }
-
-    @Test
-    @DisplayName("PUT /api/posts - Should update post successfully")
-    void testUpdatePost() throws Exception {
-        // Arrange
-        UpdatePostDTO updateDTO = new UpdatePostDTO(1, 1, "Updated Post", "Updated Body", false);
-        Post updatedPost = new Post(1, 1, "Updated Post", "Updated Body", false, LocalDateTime.now());
-
-        when(postService.update(any(UpdatePostDTO.class))).thenReturn(updatedPost);
-
-        // Act & Assert
-        mockMvc.perform(put("/api/posts")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(updateDTO)))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.data.title").value("Updated Post"))
-                .andExpect(jsonPath("$.message").value("Post updated successfully"));
-
-        verify(postService, times(1)).update(any(UpdatePostDTO.class));
-    }
-
-    @Test
-    @DisplayName("PUT /api/posts - Should update post to draft")
-    void testUpdatePostToDraft() throws Exception {
-        // Arrange
-        UpdatePostDTO updateDTO = new UpdatePostDTO(1, 1, "Updated Post", "Updated Body", true);
-        Post updatedPost = new Post(1, 1, "Updated Post", "Updated Body", true, LocalDateTime.now());
-
-        when(postService.update(any(UpdatePostDTO.class))).thenReturn(updatedPost);
-
-        // Act & Assert
-        mockMvc.perform(put("/api/posts")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(updateDTO)))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.data.draft").value(true))
-                .andExpect(jsonPath("$.message").value("Post updated successfully"));
-
-        verify(postService, times(1)).update(any(UpdatePostDTO.class));
-    }
-
-    @Test
-    @DisplayName("PUT /api/posts - Should return 404 when updating non-existent post")
-    void testUpdatePostNotFound() throws Exception {
-        // Arrange
-        UpdatePostDTO updateDTO = new UpdatePostDTO(999, 1, "Updated Post", "Updated Body", false);
         doThrow(new EntityNotFoundException("Post not found"))
-                .when(postService).update(any(UpdatePostDTO.class));
+                .when(postService).update(dtoWithId);
 
-        // Act & Assert
-        mockMvc.perform(put("/api/posts")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(updateDTO)))
-                .andExpect(status().is4xxClientError());
+        EntityNotFoundException exception = assertThrows(
+                EntityNotFoundException.class,
+                () -> postController.updatePost(pathVariableId, dtoWithoutId)
+        );
 
-        verify(postService, times(1)).update(any(UpdatePostDTO.class));
+        assertEquals("Post not found", exception.getMessage());
+        verify(postService).update(dtoWithId);
     }
 
     @Test
-    @DisplayName("DELETE /api/posts/{id} - Should delete post successfully")
-    void testDeletePost() throws Exception {
-        // Arrange
+    void deletePost_Success() {
         doNothing().when(postService).delete(1);
 
-        // Act & Assert
-        mockMvc.perform(delete("/api/posts/1"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.message").value("Post deleted successfully"));
+        ResponseEntity<SuccessResponse<Void>> response = postController.deletePost(1);
 
-        verify(postService, times(1)).delete(1);
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertNotNull(response.getBody());
+        verify(postService).delete(1);
     }
 
     @Test
-    @DisplayName("DELETE /api/posts/{id} - Should return 404 when deleting non-existent post")
-    void testDeletePostNotFound() throws Exception {
-        // Arrange
-        doThrow(new EntityNotFoundException("Post not found")).when(postService).delete(999);
+    void deletePost_Failure_PropagatesException() {
+        doThrow(new EntityNotFoundException("Post not found"))
+                .when(postService).delete(1);
 
-        // Act & Assert
-        mockMvc.perform(delete("/api/posts/999")).andExpect(status().is4xxClientError());
-        verify(postService, times(1)).delete(999);
-    }
+        EntityNotFoundException exception = assertThrows(
+                EntityNotFoundException.class,
+                () -> postController.deletePost(1)
+        );
 
-    @Test
-    @DisplayName("GET /api/posts/{id} - Should return 400 for invalid post ID")
-    void testFindPostWithInvalidId() throws Exception {
-        // Act & Assert
-        mockMvc.perform(get("/api/posts/0"))
-                .andExpect(status().isBadRequest());
+        assertEquals("Post not found", exception.getMessage());
+        verify(postService).delete(1);
     }
 }
